--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- <header>
+  <header>
     <h1>CSS Styles</h1>
-  </header> -->
+  </header>
   <main>
     <div class="loader14"></div>
   </main>
+  <section>
+    <h2>Section2</h2>
+  </section>
 </body>
 </html>
